--- a/taskify_components/taskify_common/pyproject.toml
+++ b/taskify_components/taskify_common/pyproject.toml
@@ -10,7 +10,15 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi[all]>=0.117.1",
     "loguru>=0.7.3",
+    "passlib[bcrypt]>=1.7.4",
+    "pyjwt>=2.10.1",
+    "starlette>=0.48.0",
+    "taskify_redis"
 ]
+
+[tool.uv.sources]
+taskify_redis = { path = "../taskify_redis" }
+
 
 [tool.setuptools.packages.find]
 where = ["."]
