build: 配置 UV workspace 和 Pyright 类型检查   主要变更:   - 新增根目录 pyproject.toml，配置 uv workspace 管理多个子项目   - 新增 pyrightconfig.json，统一 Python 类型检查配置   - 优化各子项目依赖管理，使用 workspace 引用内部包   - 修复导入路径,移除 sys.path 手动注入

--- a/taskify_components/taskify_common/pyproject.toml
+++ b/taskify_components/taskify_common/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "taskify-common"
+name = "taskify_common"
 version = "0.1.0"
 description = "Common utilities shared across Taskify services"
 requires-python = ">=3.11"
@@ -17,10 +17,12 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-taskify_redis = { path = "../taskify_redis" }
+taskify_redis = { workspace = true }
 
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["taskify_components*"]
+[tool.setuptools]
+packages = ["taskify_common"]
+
+[tool.setuptools.package-dir]
+taskify_common = "."
 
