--- a/taskify_admin/pyproject.toml
+++ b/taskify_admin/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
-name = "taskify-admin"
+name = "taskify_admin"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "taskify_common",
+    "taskify-common"
 ]
 
 [tool.uv.sources]
-taskify_common = { path = "../taskify_components/taskify_common" }
+taskify-common = { workspace = true }
