--- a/taskify_components/taskify_redis/pyproject.toml
+++ b/taskify_components/taskify_redis/pyproject.toml
@@ -1,5 +1,9 @@
+[build-system]
+requires = ["setuptools>=61", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "taskify-redis"
+name = "taskify_redis"
 version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.11"
@@ -7,7 +11,8 @@ dependencies = [
     "redis>=6.4.0",
 ]
 
+[tool.setuptools]
+packages = ["taskify_redis"]
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["taskify_redis*"]
+[tool.setuptools.package-dir]
+taskify_redis = "."
